--- a/test.html
+++ b/test.html
@@ -1,6 +1,6 @@
 <html>
     <h1>group project</h1>
-    <h2>text from git hub</h2>
+    <h2>text from github b2</h2>
      <h1>group project</h1>
     <h2>text from B1</h2>
 </html>
